--- a/Debug/makefile
+++ b/Debug/makefile
@@ -8,8 +8,8 @@ RM := rm -rf
 
 # All of the sources participating in the build are defined here
 -include sources.mk
+-include transform/subdir.mk
 -include third_party/xxhash/subdir.mk
--include compression/subdir.mk
 -include subdir.mk
 -include objects.mk
 
