--- a/.cproject
+++ b/.cproject
@@ -35,7 +35,7 @@
 									<listOptionValue builtIn="false" value="/usr/local/opt/zstd/include/"/>
 									<listOptionValue builtIn="false" value="/usr/local/opt/openssl/include/"/>
 								</option>
-								<option id="gnu.cpp.compiler.option.optimization.flags.2018669942" name="Other optimization flags" superClass="gnu.cpp.compiler.option.optimization.flags" useByScannerDiscovery="false" value="-march=native" valueType="string"/>
+								<option id="gnu.cpp.compiler.option.optimization.flags.2018669942" name="Other optimization flags" superClass="gnu.cpp.compiler.option.optimization.flags" useByScannerDiscovery="false" value="-march=native -mtune=native" valueType="string"/>
 								<option id="gnu.cpp.compiler.option.other.other.1419023336" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" useByScannerDiscovery="false" value="-c -fmessage-length=0" valueType="string"/>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.962502619" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
@@ -92,4 +92,5 @@
 			<resource resourceType="PROJECT" workspacePath="/pil"/>
 		</configuration>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 </cproject>
